--- a/Extracting_Text_&_Bounding_Boxes_from_Scanned_PDFs.ipynb
+++ b/Extracting_Text_&_Bounding_Boxes_from_Scanned_PDFs.ipynb
@@ -39,9 +39,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "quwFnt-6BZSA",
-        "outputId": "f9252c35-055e-4666-8510-252535449971"
+        "outputId": "b099ab20-bd1d-4d8a-8d9b-d39b41c83eb0"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +61,7 @@
             "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.11/dist-packages (from pytesseract) (25.0)\n",
             "Requirement already satisfied: numpy<2.3.0,>=2 in /usr/local/lib/python3.11/dist-packages (from opencv-python) (2.0.2)\n",
             "Downloading pymupdf-1.26.3-cp39-abi3-manylinux_2_28_x86_64.whl (24.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m74.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m67.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pytesseract-0.3.13-py3-none-any.whl (14 kB)\n",
             "Installing collected packages: pytesseract, pymupdf\n",
             "Successfully installed pymupdf-1.26.3 pytesseract-0.3.13\n"
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "5nSKW5FHBcCw"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -108,9 +108,9 @@
           "height": 77
         },
         "id": "ZpCQgAYCBdeI",
-        "outputId": "738f59f9-ffef-466b-aec6-c1709b579a07"
+        "outputId": "eca19d96-f2d3-4377-b294-d51b7601edc8"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -120,9 +120,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-6fbf05e7-6783-472b-a7fd-6bca7f529cde\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-63271d49-a074-417b-b08e-8702db8477f0\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-6fbf05e7-6783-472b-a7fd-6bca7f529cde\">\n",
+              "     <output id=\"result-63271d49-a074-417b-b08e-8702db8477f0\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -332,7 +332,7 @@
         "id": "voyrnrXsBewY",
         "outputId": "16f147de-2acf-4908-db9e-f1b7b4a35f57"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
         "id": "V3bhmZgoBf05",
         "outputId": "78b2087e-7b1c-46a7-e7b4-37e38c48613f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -410,7 +410,7 @@
         "id": "1x0nr_8rAUUz",
         "outputId": "af80f1c2-e3b7-4a18-f812-d5cd6dc706b3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -450,85 +450,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "-08QQ3tUCOuR",
-        "outputId": "c3bf3669-9bb3-4f5c-f67b-46da9ba3896b"
+        "outputId": "3a93eba2-90aa-447f-e4aa-dce5beef3a67"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "OCR Extracted Text:\n",
-            " BOC # 2142861\n",
-            "fecweed\n",
-            "FG. 08,2007 AT 43:35PN\n",
-            "\n",
-            "MORTGAGE\n",
-            "DOCUMENT NUMBER: SO '\n",
-            "\n",
-            "NAME & RETURN ADDRESS:\n",
-            "\n",
-            "RESIDENTIAL LOAM CENTERG OF AMERICA,\n",
-            "\n",
-            "rnc. OES A LCD\n",
-            "2150 B CEVOH AVE, STR 109 BUM trey\n",
-            "DEA PLAINGS, IL $0019 REBISTER OF DEEDS\n",
-            "\n",
-            "Fee Paowts\n",
-            "\n",
-            "since. DENTIER MER EVA A\n",
-            "\n",
-            "— Hirai Alene This Litt Por Rocuritng Cian}\n",
-            "\n",
-            " \n",
-            "\n",
-            "A Com Ma an | “\n",
-            "Stale of Wlocoee\n",
-            "\n",
-            "391-2666586-701\n",
-            "\n",
-            "409731\n",
-            "MIN 100186500004837233\n",
-            "\n",
-            "THIS MORTGAGE (“Security Instrameat\"} Je given on AUGUST 3BD, 2007\n",
-            "The Mortgagor is\n",
-            "SHAME M, CAMPDELL , A Single. Rersow\n",
-            "c- .\n",
-            "\n",
-            "Go\n",
-            "\n",
-            "(solely as twomince for Lander, wv hercinaiter defiad, and Lendet's saccemora and aisigts), as mortgagee. MERS ts\n",
-            "Orgmized md existing woder tet laws of Deleware, art! as an address aad telephone number of P.O, Bow 2026,\n",
-            "Flint, ¥4] 4850162026, s¢1, (GE) 679-MERS.\n",
-            "\n",
-            "RESIOWYTIAL LOAW CENTERS OF AHERICA, INC,\n",
-            "\n",
-            "CLander*’) fs organized and edsting wader the Laws of ILLINOIS rad\n",
-            "bat an sddrom of 2250 2 DEVON AVR, GIR 300, DEO PLAINES, IL 60018\n",
-            "+ Borrower oores Lender the principal sun of\n",
-            "O88 HUNDRED TWENTY GIX THOUSAND EIGHT HUNDRED BEVEHTY FIVE AHD HO/100.\n",
-            "Dollies (U5. 5 126,875.00 ’.\n",
-            "This debi [4 evisemoed by Borrawer's moc dated the mama dit os dit Scourlty Inscrumerd (“Nose”) which\n",
-            "Pruvides for soondhly praymenda, with the full debt, pot pald eariler, dt and paynbna §= SEPTEMBER 1ST,\n",
-            "2037 + This Seeurity Unstrunment secures to Lender: (a) the repayment of the dete evidenced by the\n",
-            "Node, with interest, acd al) renewals, cxtenaicas and modifications of the Nove, (b) tte payment of all caber sums.\n",
-            "With imterest, advanced wnder paragraph 7 to protect the security of this Security Instrument and (c) the performance\n",
-            "VIA Wirevenia hiertysge wich MERE - NG '\n",
-            "ALOT) aso Ammeted 281\n",
-            "\n",
-            "Poin wwe Sok +\n",
-            "‘Walt ORTGASE Botan} - goa 7at\n",
-            "\n",
-            "LAR SSSt0\n",
-            "\f\n",
-            "Word: , BBox: (0, 0, 1224, 1584)\n",
-            "Word: , BBox: (844, 50, 272, 72)\n",
-            "Word: , BBox: (844, 50, 272, 72)\n",
-            "Word: , BBox: (864, 50, 226, 24)\n",
-            "Word: BOC, BBox: (864, 50, 52, 18)\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'pytesseract' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2-669978136.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Use optimized Tesseract OCR configurations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcustom_config\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mr'--oem 3 -l eng'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mocr_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpytesseract\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_to_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcustom_config\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pytesseract' is not defined"
           ]
         }
       ]
@@ -561,9 +499,9 @@
           "height": 211
         },
         "id": "35FWFX4rDvQr",
-        "outputId": "acd70a57-42f7-4882-c605-8ed9daaed184"
+        "outputId": "f0d53ba8-d38e-402b-e1d8-3c6afeac7eae"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "error",
@@ -572,7 +510,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-139c35687aef>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# 📌 Step 8.1: Preprocess OCR Text (Cleaning & Formatting)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mocr_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\" \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mocr_text\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Remove extra spaces & newlines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mocr_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'[^a-zA-Z0-9\\s,.%-]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mocr_text\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Remove special chars\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1-796412088.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# 📌 Step 8.1: Preprocess OCR Text (Cleaning & Formatting)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mocr_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\" \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mocr_text\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Remove extra spaces & newlines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mocr_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'[^a-zA-Z0-9\\s,.%-]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mocr_text\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Remove special chars\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNameError\u001b[0m: name 'ocr_text' is not defined"
           ]
         }
